<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/text_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/theme_black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/register_Message_Phone"
            android:inputType="phone"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signIn_account"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/register_Message_Email"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signIn_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/register_Message_Password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/register_password2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/Message_Password2"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="44dp"
            android:text="@string/nextStep"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>