<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/text_signIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signIn"
                android:textAlignment="center"
                android:textColor="@color/theme_black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/signIn_account"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/app_name"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signIn_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"

            android:ems="10"
            android:hint="@string/SignIn_Message_Password"
            android:inputType="textPassword"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/btn_forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:text="忘记密码？"
            android:textSize="12sp"
            android:textColor="@color/green_100"
            android:textAlignment="textEnd" />

        <Button
            android:id="@+id/btn_confirmLogin"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="32dp"
            android:text="@string/confirmLogin"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:strokeColor="#AF4444" />

    </LinearLayout>

    <TextView
        android:id="@+id/goto_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/noAccount"
        android:textAlignment="center"
        android:textColor="@color/green_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>