<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_car"
    android:fadingEdge="vertical"
    tools:context=".ui.login.WelcomeActivity">

    <TextView
        android:id="@+id/text_inroApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_introduction"
        android:textAlignment="center"
        android:textColor="@color/theme_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:letterSpacing="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#000000"
        android:paddingVertical="12dp"
        android:text="@string/Phone_signIn"
        android:textColor="#FFFFFF"
        app:cornerRadius="100dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_wechat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/circle_bg"
        android:backgroundTint="#80DFDBDB"
        android:contentDescription="@string/Email_signIn"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_phone"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_wechat"
        app:tint="#FFFFFF"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_qq"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_bg"
        android:backgroundTint="#80DFDBDB"
        android:contentDescription="@string/QQ_signIn"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_phone"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_qq"
        app:tint="#FFFFFF"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_alipay"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_bg"
        android:backgroundTint="#80DFDBDB"
        android:contentDescription="@string/Alipay_signIn"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_phone"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_alipay"
        app:tint="#FFFFFF"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_email"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_bg"
        android:backgroundTint="#80DFDBDB"
        android:contentDescription="@string/Email_signIn"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_phone"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_email"
        app:tint="#FFFFFF"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:buttonTint="@color/white"
        android:text="@string/agreementOfPrivacy"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_alipay"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>