<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".ui.user.UserFragment">

    <LinearLayout
        android:id="@+id/UserInfoShortLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="三千客"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/VIPMedal"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/vipMedal"
                android:src="@drawable/ic_medal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/radius_border"
            android:orientation="horizontal"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="手机号"
                    android:textColor="@color/theme_black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-light"
                    android:text="13857655797"
                    android:textAlignment="center"
                    android:textColor="@color/theme_grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_phone"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:src="@drawable/ic_phone2" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/radius_border"
            android:orientation="horizontal"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_car"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="电动汽车车牌"
                    android:textColor="@color/theme_black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_car"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-light"
                    android:text="浙J·123456"
                    android:textAlignment="center"
                    android:textColor="@color/theme_grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_car"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/ic_car2" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/radius_border"
        android:orientation="horizontal"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_motorbike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="电动自行车车牌号"
                android:textColor="@color/theme_black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_motorbike"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-light"
                android:text="西湖·12345"
                android:textAlignment="center"
                android:textColor="@color/theme_grey"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_motorbike"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/ic_motorbike" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/radius_border"
        android:orientation="vertical"
        android:paddingVertical="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_hitory"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_historyorder" />

            <TextView
                android:id="@+id/tv_historyOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_weight="6"
                android:fontFamily="sans-serif-light"
                android:paddingStart="4dp"
                android:text="@string/historyOrder"
                android:textColor="@color/theme_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/detail"
                android:textAlignment="textEnd"
                android:textColor="@color/theme_black"
                tools:ignore="RtlCompat" />

            <ImageView
                android:id="@+id/history_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginEnd="4dp"
                android:layout_weight="0.7"
                android:src="@drawable/ic_arrow_right_bold" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="金额102.3元"
                android:textColor="@color/theme_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="西湖区沿水街道229号停车场"
                android:textColor="@color/theme_grey" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:gravity="right"
            android:text="2023年6月18日4时9分7秒"
            android:textColor="@color/theme_grey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_border"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_historyorder" />

        <TextView
            android:id="@+id/CardShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:fontFamily="sans-serif-light"
            android:paddingStart="12dp"
            android:text="桩主加盟"
            android:textColor="@color/theme_black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/detail"
            android:textAlignment="textEnd"
            android:textColor="@color/theme_black"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/join_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.7"
            android:src="@drawable/ic_arrow_right_bold" />
    </LinearLayout>

</LinearLayout>